--- a/activities/Resources/Countries.fr-FR.resx
+++ b/activities/Resources/Countries.fr-FR.resx
@@ -123,8 +123,38 @@
   <data name="10" xml:space="preserve">
     <value>FranceFR</value>
   </data>
+  <data name="11" xml:space="preserve">
+    <value>test1</value>
+  </data>
+  <data name="12" xml:space="preserve">
+    <value>test2</value>
+  </data>
+  <data name="13" xml:space="preserve">
+    <value>test3</value>
+  </data>
+  <data name="14" xml:space="preserve">
+    <value>test4</value>
+  </data>
+  <data name="15" xml:space="preserve">
+    <value>test5</value>
+  </data>
+  <data name="16" xml:space="preserve">
+    <value>test6</value>
+  </data>
+  <data name="17" xml:space="preserve">
+    <value>test7</value>
+  </data>
+  <data name="18" xml:space="preserve">
+    <value>test8</value>
+  </data>
+  <data name="19" xml:space="preserve">
+    <value>test9</value>
+  </data>
   <data name="2" xml:space="preserve">
     <value>United StatesFR</value>
+  </data>
+  <data name="20" xml:space="preserve">
+    <value>test10</value>
   </data>
   <data name="3" xml:space="preserve">
     <value>IndiaFR</value>
