--- a/activities/Resources/Countries.en-US.resx
+++ b/activities/Resources/Countries.en-US.resx
@@ -123,8 +123,44 @@
   <data name="10" xml:space="preserve">
     <value>France</value>
   </data>
+  <data name="11" xml:space="preserve">
+    <value>Canada</value>
+  </data>
+  <data name="12" xml:space="preserve">
+    <value>Mexico</value>
+  </data>
+  <data name="13" xml:space="preserve">
+    <value>Pakistan</value>
+  </data>
+  <data name="14" xml:space="preserve">
+    <value>Vietnam</value>
+  </data>
+  <data name="15" xml:space="preserve">
+    <value>Egypt</value>
+  </data>
+  <data name="16" xml:space="preserve">
+    <value>Tunisia</value>
+  </data>
+  <data name="17" xml:space="preserve">
+    <value>Algeria</value>
+  </data>
+  <data name="18" xml:space="preserve">
+    <value>Italy</value>
+  </data>
+  <data name="19" xml:space="preserve">
+    <value>Spain</value>
+  </data>
   <data name="2" xml:space="preserve">
     <value>United States</value>
+  </data>
+  <data name="20" xml:space="preserve">
+    <value>Argentina</value>
+  </data>
+  <data name="21" xml:space="preserve">
+    <value>Columbia</value>
+  </data>
+  <data name="22" xml:space="preserve">
+    <value>Iran</value>
   </data>
   <data name="3" xml:space="preserve">
     <value>India</value>
