--- a/activities/Resources/Languages.resx
+++ b/activities/Resources/Languages.resx
@@ -118,10 +118,22 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="1" xml:space="preserve">
-    <value>Chinese</value>
+    <value>Chinese, Mandarin</value>
   </data>
   <data name="10" xml:space="preserve">
     <value>Punjabi</value>
+  </data>
+  <data name="11" xml:space="preserve">
+    <value>French</value>
+  </data>
+  <data name="12" xml:space="preserve">
+    <value>German</value>
+  </data>
+  <data name="13" xml:space="preserve">
+    <value>Ukrainean</value>
+  </data>
+  <data name="14" xml:space="preserve">
+    <value>Hungarian</value>
   </data>
   <data name="2" xml:space="preserve">
     <value>Spanish</value>
