--- a/activities/Resources/Countries.en-US.resx
+++ b/activities/Resources/Countries.en-US.resx
@@ -118,63 +118,63 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="1" xml:space="preserve">
-    <value>ChinaFR</value>
+    <value>c1</value>
   </data>
   <data name="10" xml:space="preserve">
-    <value>FranceFR</value>
+    <value>c10</value>
   </data>
   <data name="11" xml:space="preserve">
-    <value>test1</value>
+    <value>c11</value>
   </data>
   <data name="12" xml:space="preserve">
-    <value>test2</value>
+    <value>c12</value>
   </data>
   <data name="13" xml:space="preserve">
-    <value>test3</value>
+    <value>c13</value>
   </data>
   <data name="14" xml:space="preserve">
-    <value>test4</value>
+    <value>c14</value>
   </data>
   <data name="15" xml:space="preserve">
-    <value>test5</value>
+    <value>c15</value>
   </data>
   <data name="16" xml:space="preserve">
-    <value>test6</value>
+    <value>c16</value>
   </data>
   <data name="17" xml:space="preserve">
-    <value>test7</value>
+    <value>c17</value>
   </data>
   <data name="18" xml:space="preserve">
-    <value>test8</value>
+    <value>c18</value>
   </data>
   <data name="19" xml:space="preserve">
-    <value>test9</value>
+    <value>c19</value>
   </data>
   <data name="2" xml:space="preserve">
-    <value>United StatesFR</value>
+    <value>c2</value>
   </data>
   <data name="20" xml:space="preserve">
-    <value>test10</value>
+    <value>c20</value>
   </data>
   <data name="3" xml:space="preserve">
-    <value>IndiaFR</value>
+    <value>c3</value>
   </data>
   <data name="4" xml:space="preserve">
-    <value>JapanFR</value>
+    <value>c4</value>
   </data>
   <data name="5" xml:space="preserve">
-    <value>GermanyFR</value>
+    <value>c5</value>
   </data>
   <data name="6" xml:space="preserve">
-    <value>RussiaFR</value>
+    <value>c6</value>
   </data>
   <data name="7" xml:space="preserve">
-    <value>IndonesiaFR</value>
+    <value>c7</value>
   </data>
   <data name="8" xml:space="preserve">
-    <value>BrazilFR</value>
+    <value>c8</value>
   </data>
   <data name="9" xml:space="preserve">
-    <value>United KingdomFR</value>
+    <value>c9</value>
   </data>
 </root>
