--- a/activities/Resources/Countries.fr-FR.resx
+++ b/activities/Resources/Countries.fr-FR.resx
@@ -124,37 +124,46 @@
     <value>FranceFR</value>
   </data>
   <data name="11" xml:space="preserve">
-    <value>test1</value>
+    <value>CanadaFR</value>
   </data>
   <data name="12" xml:space="preserve">
-    <value>test2</value>
+    <value>MexicoFR</value>
   </data>
   <data name="13" xml:space="preserve">
-    <value>test3</value>
+    <value>PakistanFR</value>
   </data>
   <data name="14" xml:space="preserve">
-    <value>test4</value>
+    <value>VietnamFR</value>
   </data>
   <data name="15" xml:space="preserve">
-    <value>test5</value>
+    <value>EgyptFR</value>
   </data>
   <data name="16" xml:space="preserve">
-    <value>test6</value>
+    <value>TunisiaFR</value>
   </data>
   <data name="17" xml:space="preserve">
-    <value>test7</value>
+    <value>AlgeriaFR</value>
   </data>
   <data name="18" xml:space="preserve">
-    <value>test8</value>
+    <value>ItalyFR</value>
   </data>
   <data name="19" xml:space="preserve">
-    <value>test9</value>
+    <value>SpainFR</value>
   </data>
   <data name="2" xml:space="preserve">
     <value>United StatesFR</value>
   </data>
   <data name="20" xml:space="preserve">
-    <value>test10</value>
+    <value>ArgentinaFR</value>
+  </data>
+  <data name="21" xml:space="preserve">
+    <value>ColumbiaFR</value>
+  </data>
+  <data name="22" xml:space="preserve">
+    <value>IranFR</value>
+  </data>
+  <data name="23" xml:space="preserve">
+    <value>SwitzerlandFR</value>
   </data>
   <data name="3" xml:space="preserve">
     <value>IndiaFR</value>
