--- a/activities/Resources/Languages.resx
+++ b/activities/Resources/Languages.resx
@@ -141,4 +141,7 @@
   <data name="8" xml:space="preserve">
     <value>Spanish</value>
   </data>
+  <data name="9" xml:space="preserve">
+    <value>Turkish</value>
+  </data>
 </root>
