--- a/activities/Resources/Countries.en-US.resx
+++ b/activities/Resources/Countries.en-US.resx
@@ -165,6 +165,15 @@
   <data name="23" xml:space="preserve">
     <value>Switzerland</value>
   </data>
+  <data name="24" xml:space="preserve">
+    <value>Thailand</value>
+  </data>
+  <data name="25" xml:space="preserve">
+    <value>Turkey</value>
+  </data>
+  <data name="26" xml:space="preserve">
+    <value>Ukraine</value>
+  </data>
   <data name="3" xml:space="preserve">
     <value>India</value>
   </data>
