--- a/activities/Resources/Countries.fr-FR.resx
+++ b/activities/Resources/Countries.fr-FR.resx
@@ -165,6 +165,15 @@
   <data name="23" xml:space="preserve">
     <value>SwitzerlandFR</value>
   </data>
+  <data name="24" xml:space="preserve">
+    <value>ThailandFR</value>
+  </data>
+  <data name="25" xml:space="preserve">
+    <value>TurkeyFR</value>
+  </data>
+  <data name="26" xml:space="preserve">
+    <value>UkraineFR</value>
+  </data>
   <data name="3" xml:space="preserve">
     <value>IndiaFR</value>
   </data>
